# rest-app-back

./: Dockerfile  README.md  docker-compose.yml  local.env  pyproject.toml
app/: main.py  schemas.py
app/db/: database.py  models.py  repositories.py
app/services/: high_speed.py  location.py  property.py  visited_places.py
scripts/: db_local.sample.sql
