[tool.poetry]
name = "rest-app-back"
version = "0.1.0"
description = ""
authors = ["Mauricio Venegas <mauven@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
loguru = "^0.6.0"
simplejson = "^3.17.6"
fastapi-camelcase = "^1.0.5"
SQLAlchemy = "^1.4.40"
Shapely = "^1.8.4"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
